# docker-codexbox

./: .dockerignore  .env.test.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.full  Makefile  README.md  codexbox-agent.sh  codexbox-entrypoint.sh  install.sh  test.sh  wrapper.sh
.github/workflows/: collaborators-only.yml  pipeline.yml
codexbox/: pyproject.toml
codexbox/codexbox/: __init__.py  adapter.py
codexbox/init.d/: 10-codex-auth-config.sh
codexbox/tests/: test_adapter.py
full-go/: go.mod  go.sum  tools.txt
full-node/: .npmrc  package.json  pnpm-lock.yaml
full-python/: requirements.in  requirements.txt
tests/: common.sh  e2e-common.sh  test_full_image.sh  test_image_select.sh  test_smoke.sh
