[project]
name = "codexbox"
version = "0.3.5"
description = "OpenAI Codex CLI adapter for the aicodebox base image"
requires-python = ">=3.12"
authors = [{ name = "psyb0t" }]
license = { text = "WTFPL" }
# Runtime deps live in the aicodebox base image (aicodebox pkg + fastapi +
# uvicorn + python-telegram-bot + croniter + mcp + pydantic + pyyaml — all
# already installed system-wide via `uv pip install --system` in the base's
# Dockerfile). The adapter itself has zero runtime deps beyond aicodebox,
# which is why `uv pip install --system --break-system-packages --no-deps
# /opt/codexbox` in the Dockerfile is safe.
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["codexbox"]

# ── uv-native dev tooling (PEP 735) ─────────────────────────────────────────
# `uv sync --group dev` from this dir installs pytest + linters and pulls
# aicodebox in editable mode from the sibling repo. Docker builds don't touch
# this group — the Dockerfile installs the adapter with --no-deps against the
# base's already-present aicodebox.
[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "pyright>=1.1.400",
    "aicodebox",
]

[tool.uv.sources]
aicodebox = { path = "../../docker-aicodebox", editable = true }

# ── linters / formatters ────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E/F/W  — pycodestyle + pyflakes basics
# I      — import sorting (replaces isort)
# B      — bugbear (mutable defaults, unused loop vars, etc.)
# UP     — pyupgrade (modernize syntax to target-version)
# SIM    — simplify (redundant if/else, contextlib.suppress, etc.)
# C4     — comprehension idioms
# ARG    — unused function args (silenced for pytest fixtures via per-file)
select = ["E", "F", "W", "I", "B", "UP", "SIM", "C4", "ARG"]
ignore = ["E501"]  # ruff format handles line length

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG001"]  # pytest fixture params look unused to static analysis

[tool.pyright]
include = ["codexbox", "tests"]
exclude = ["**/__pycache__"]
pythonVersion = "3.12"
# aicodebox lives in the container's system Python but not in the local
# dev-group venv unless `uv sync --group dev` ran; keep pyright forgiving.
reportMissingImports = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
